Use better patterns for login view (#671)
My feeback on what the LLM did to #622 is that it should use Knockout
and SUI
instead of trying to continue pushing the usage into template and manual
element
manipulation with JS.

This solves the UX issues with popups, SUI popups are stronger when used
directly instead of using them HTML only.

I didn't test this thoroughly.



https://github.com/user-attachments/assets/e8dd620c-ac17-4cab-9281-39793ecfc403

--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -20,8 +20,7 @@
   {% trans "GitHub" as provider_name %}
   <li class="item">
     <a class="ui button"
-       {% if last_login_method == "github" or last_login_method == "githubapp" %} data-tooltip="Last used" data-variation="teal visible" data-position="right center" {% endif %}
-       data-bind="click: $root.show_modal('github-select')"
+       data-bind="click: show_github_modal, semanticui: { popup: popup_login_method(['github','githubapp'], 'right center') }"
        title="{{ provider_name }}">
       <i class="fa-brands fa-github icon"></i>
       {% blocktrans trimmed with provider_name=provider_name verbiage=verbiage|default:'Connect to' %}
@@ -29,7 +28,9 @@
       {% endblocktrans %}
     </a>
   </li>
-  <div class="ui tiny modal" data-modal-id="github-select">
+
+  <div class="ui tiny modal"
+       data-bind="semanticui: { modal: github_modal_config() }">
     <div class="header">
       {% blocktrans trimmed with verbiage=verbiage|default:'Connect to' provider_name=provider_name %}
         {{ verbiage }} {{ provider_name }}
