--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -178,7 +178,7 @@ collapsed, to save visual space and can be expanded with the right label.
           </a>
         {% endif %}
         {% if request.user|is_admin:project %}
-          {% if user.is_staff %}
+          {% if request.user.is_staff %}
             <a class="item" data-bind="click: $root.show_modal('project-debug')">
               <i class="fa-duotone fa-microscope icon"></i>
               {% trans "Debug" %}
@@ -193,7 +193,7 @@ collapsed, to save visual space and can be expanded with the right label.
       </div>
     </div>
 
-    {% if request.user|is_admin:project %}
+    {% if request.user.is_staff %}
       <div class="ui mini modal" data-modal-id="project-debug">
         <div class="header">{% trans "Debug information" %}</div>
         {% comment %}
