--- a/readthedocsext/theme/templates/projects/partials/edit/temporary_access_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/temporary_access_list.html
@@ -104,4 +104,16 @@
       <div class="description">{{ object.expires }}</div>
     </div>
   </div>
+  <div class="item">
+    <div class="content">
+      <div class="header">{% trans "Last used" %}</div>
+      <div class="description">
+        {% if object.last_used_at %}
+          {{ object.last_used_at|timesince }}
+        {% else %}
+          {% trans "Never" %}
+        {% endif %}
+      </div>
+    </div>
+  </div>
 {% endblock list_item_extra_items %}
