--- a/readthedocsext/theme/templates/projects/settings_basics_form.html
+++ b/readthedocsext/theme/templates/projects/settings_basics_form.html
@@ -14,9 +14,12 @@
 {% endblock project_edit_active %}
 
 {% block project_edit_content %}
-  <form class="ui form" method="post" action=".">
+  <form class="ui form"
+        method="post"
+        action="."
+        data-bind="using: new ProjectSettingsView()">
     {% csrf_token %}
-    {{ form|crispy }}
+    {% crispy form %}
     <input class="ui primary button" type="submit" value="{% trans "Save" %}" />
   </form>
 
