--- a/readthedocsext/theme/templates/semantic-ui/errors.html
+++ b/readthedocsext/theme/templates/semantic-ui/errors.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load trans from i18n %}
 
 {% if form.errors and form.non_field_errors %}
   {% for error in form.non_field_errors %}
