Use web components strictly for field enhancement
Instead of using Knockout, this is using a web component to
progressively enhance the fields into a single combination field.

There is some underlying base classes to help make this all cleaner.
Input and dropdown fields are driven by Django/Crispy, the HTML/SUI
modules drive the web component instead of the web component driving the
element.

--- a/readthedocsext/theme/templates/semantic-ui/fields/base.html
+++ b/readthedocsext/theme/templates/semantic-ui/fields/base.html
@@ -27,7 +27,7 @@
       {% endcomment %}
       <label for="{{ field.id_for_label }}"
              class="ui {{ label_class }}"
-             {% if field.help_text %} data-html="{{ field.help_text|force_escape }}" data-bind="semanticui: {popup: {hoverable: true}}"{% endif %}>
+             {% if field.help_text %} data-html="{{ field.help_text|force_escape }}" data-bind="semanticui: {popup: {hoverable: true, delay: {show: 500}}}"{% endif %}>
         {{ field.label|safe }}
         {% if field.help_text %}
           <i class="ui grey fa-duotone fa-circle-question icon"></i>
