--- a/readthedocsext/theme/templates/projects/settings_basics_form.html
+++ b/readthedocsext/theme/templates/projects/settings_basics_form.html
@@ -16,8 +16,7 @@
 {% block project_edit_content %}
   <form class="ui form"
         method="post"
-        action="."
-        data-bind="using: new ProjectSettingsView()">
+        action=".">
     {% csrf_token %}
     {% crispy form %}
     <input class="ui primary button" type="submit" value="{% trans "Save" %}" />
