--- a/readthedocsext/theme/templates/semantic-ui/layout/rich_select.html
+++ b/readthedocsext/theme/templates/semantic-ui/layout/rich_select.html
@@ -28,19 +28,24 @@
 {% endcomment %}
 
 {% whitespaceless as form_data_bind %}
-  {% if "data-bind" not in field.field.widget.attrs.keys %}
-    semanticui: { dropdown: {}}
-  {% else %}
+  {% if data_bind or data_bind == "" %}
+    {{ data_bind }}
+  {% elif "data-bind" in field.field.widget.attrs.keys %}
     {% for key, value in field.field.widget.attrs.items %}
       {% if key == "data-bind" %}{{ value }}{% endif %}
     {% endfor %}
+  {% else %}
+    semanticui: { dropdown: {}}
   {% endif %}
 {% endwhitespaceless %}
 
 <div class="ui long fluid selection category search dropdown{% if field.attrs.multiple %} multiple{% endif %}"
-     data-bind="{{ form_data_bind }}">
+     data-bind="{{ form_data_bind }}"
+     data-semanticui-dropdown="true"
+     slot="{{ field.name }}-input">
   {{ field.as_hidden }}
   <i class="dropdown icon"></i>
+  <input class="search" tabindex="-1" />
   <div class="default text">{{ field.attrs.placeholder }}</div>
   <div class="menu">
     {% for _, choice in field.field.choices %}
@@ -54,7 +59,8 @@
       {% endcomment %}
       <div class="{% if choice.disabled %}disabled{% endif %} vertical item"
            data-value="{{ choice.value|default_if_none:"" }}"
-           data-text="{{ choice.text }}">
+           data-text="{{ choice.text }}"
+           data-description="{{ choice.description }}">
         {% if choice.image_url %}
           <img class="ui mini avatar image"
                src="{{ choice.image_url }}"
