--- a/readthedocsext/theme/templates/projects/settings_basics_form.html
+++ b/readthedocsext/theme/templates/projects/settings_basics_form.html
@@ -14,10 +14,7 @@
 {% endblock project_edit_active %}
 
 {% block project_edit_content %}
-  <form class="ui form"
-        method="post"
-        action=".">
-    {% csrf_token %}
+  <form class="ui form" method="post" action=".">
     {% crispy form %}
     <input class="ui primary button" type="submit" value="{% trans "Save" %}" />
   </form>
