Updates from review

--- a/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
+++ b/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
@@ -44,41 +44,30 @@
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_menu %}
-  {% if object.get_provider.id == "github" %}
-    <div class="ui small icon buttons">
+  <div class="ui small icon buttons">
+    {% if object.get_provider.id == "github" %}
       {% if object|has_github_app_account %}
         <a class="ui icon button"
            data-content="{% trans "Complete migration to GitHub App" %}"
            href="{% url "migrate_to_github_app" %}"
-           target="_blank">
-          <i class="fad fa-circle-arrow-up"></i>
-          Complete Migration
-        </a>
+           target="_blank">Migrate</a>
       {% else %}
         <a class="ui icon button"
            data-content="{% trans "Migrate to GitHub App" %}"
            href="{% url "migrate_to_github_app" %}"
-           target="_blank">
-          <i class="fad fa-rocket icon"></i>
-          Migrate to GitHub App
-        </a>
+           target="_blank">Migrate</a>
       {% endif %}
-    </div>
-  {% endif %}
+    {% endif %}
 
-  {% if object.get_provider.id == "githubapp" %}
-    <div class="ui small icon buttons">
+    {% if object.get_provider.id == "githubapp" %}
       <a class="ui icon button"
          data-content="{% trans "Manage GitHub App on GitHub" %}"
          href="https://github.com/apps/{{ GITHUB_APP_NAME }}/installations/new/"
          target="_blank">
-        Manage
-        <i class="fad fa-external-link icon"></i>
+        <i class="fad fa-wrench icon"></i>
       </a>
-    </div>
-  {% endif %}
+    {% endif %}
 
-  <div class="ui small icon buttons">
     <form method="post" action="{% url 'socialaccount_connections' %}">
       {% csrf_token %}
       <input type="hidden" name="account" value="{{ object.id }}" />
