--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -75,6 +75,7 @@
       {% block addons_search %}
         <div class="ui tab" data-tab="search">
           {{ form.search_enabled | as_crispy_field }}
+          {{ form.search_show_subprojects_filter | as_crispy_field }}
         </div>
       {% endblock addons_search %}
 
