--- a/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
@@ -28,7 +28,7 @@
 {% block list_placeholder_text %}
   <a class="ui button"
      target="_blank"
-     href="https://docs.readthedocs.io/page/automation-rules.html">{% trans "Learn more" %}</a>.
+     href="https://docs.readthedocs.io/page/automation-rules.html">{% trans "Learn more" %}</a>
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_buttons %}
