--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -51,6 +51,7 @@
         <a class="item" data-tab="filetreediff">{% trans "File tree diff" %}</a>
         <a class="item" data-tab="link-previews">{% trans "Link previews" %}</a>
         <a class="item" data-tab="hotkeys">{% trans "Hotkeys" %}</a>
+        <a class="item" data-tab="custom-script">{% trans "Custom script" %}</a>
         <a class="item" data-tab="advanced">{% trans "Advanced" %}</a>
       </div>
     {% endif %}
@@ -119,6 +120,13 @@
           {{ form.hotkeys_enabled | as_crispy_field }}
         </div>
       {% endblock addons_hotkeys %}
+
+      {% block addons_custom_script %}
+        <div class="ui tab" data-tab="custom-script">
+          {{ form.customscript_enabled | as_crispy_field }}
+          {{ form.customscript_src | as_crispy_field }}
+        </div>
+      {% endblock addons_custom_script %}
 
       {% block addons_advanced %}
         <div class="ui tab" data-tab="advanced">
