Connected services: add actions related to GH App (#680)
Closes https://github.com/readthedocs/ext-theme/pull/655

Closes https://github.com/readthedocs/ext-theme/issues/583

I'm not sure if this is the best way to show users that they need to
migrate or complete the migration. I think it's better if we just show
an info alert at the top? A button in the integration listing feels
weird. The manage action looks okay.

<img width="826" height="373" alt="Screenshot 2025-12-17 at 22-16-16
Connected services - Read the Docs Dev"
src="https://github.com/user-attachments/assets/ea46a200-104b-49b3-8eeb-72f525effafd"
/>

--- a/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
+++ b/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
@@ -1,5 +1,6 @@
 {% extends "includes/crud/table_list.html" %}
 
+{% load has_github_app_account from readthedocs.socialaccounts %}
 {% load blocktrans trans from i18n %}
 {% load can_be_disconnected from readthedocs.socialaccounts %}
 
@@ -43,16 +44,41 @@
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_menu %}
-  <form method="post" action="{% url 'socialaccount_connections' %}">
-    {% csrf_token %}
-    <input type="hidden" name="account" value="{{ object.id }}" />
-    <div class="ui small icon buttons">
+  {% if object.get_provider.id == "github" %}
+    <div class="ui small buttons">
+      {% if object|has_github_app_account %}
+        <a class="ui secondary button"
+           data-content="{% trans "Complete migration to GitHub App" %}"
+           href="{% url "migrate_to_github_app" %}"
+           target="_blank">{% trans "Migrate" %}</a>
+      {% else %}
+        <a class="ui secondary button"
+           data-content="{% trans "Migrate to GitHub App" %}"
+           href="{% url "migrate_to_github_app" %}"
+           target="_blank">{% trans "Migrate" %}</a>
+      {% endif %}
+    </div>
+  {% endif %}
+
+  <div class="ui small icon buttons">
+    {% if object.get_provider.id == "githubapp" %}
+      <a class="ui icon button"
+         data-content="{% trans "Manage GitHub App on GitHub" %}"
+         href="https://github.com/apps/{{ GITHUB_APP_NAME }}/installations/new/"
+         target="_blank">
+        <i class="fad fa-wrench icon"></i>
+      </a>
+    {% endif %}
+
+    <form method="post" action="{% url 'socialaccount_connections' %}">
+      {% csrf_token %}
+      <input type="hidden" name="account" value="{{ object.id }}" />
       <button class="ui button {% if not object|can_be_disconnected %}disabled{% endif %}"
               data-content="{% trans "Disconnect account" %}">
         <i class="fas fa-trash icon"></i>
       </button>
-    </div>
-  </form>
+    </form>
+  </div>
 {% endblock list_item_right_menu %}
 
 {% block list_item_image %}
