GitHub App: mention existing accounts

--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -99,7 +99,8 @@
                           {% endblocktrans %}
                         {% else %}
                           {% blocktrans trimmed %}
-                            For users that have switched their connected GitHub accounts already.
+                            For users that have switched their connected GitHub accounts already,
+                            or that would like to switch to our new GitHub App.
                           {% endblocktrans %}
                         {% endif %}
                       {% endif %}
