GitHub App: remote beta label

--- a/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
+++ b/readthedocsext/theme/templates/profiles/private/migrate_to_gh_app.html
@@ -228,14 +228,7 @@
 
               <a class="ui button" href="?step=revoke">{% trans "Next" %}</a>
             {% elif step == "revoke" %}
-              <div class="ui small warning message">
-                <i class="fad fa-warning icon"></i>
-                {% blocktrans trimmed %}
-                  During the beta period, we don't recommend revoking access to our old GitHub OAuth app.
-                  You will be reminded to complete this step after the beta period ends.
-                {% endblocktrans %}
-              </div>
-              <div class="ui disabled basic segment">
+              <div class="ui basic segment">
                 <p>
                   {% blocktrans trimmed %}
                     Revoke access to our old GitHub OAuth app.
@@ -260,14 +253,7 @@
               <a class="ui button {% if not step_revoke_completed %}disabled{% endif %}"
                  href="?step=disconnect">{% trans "Next" %}</a>
             {% elif step == "disconnect" %}
-              <div class="ui small warning message">
-                <i class="fad fa-warning icon"></i>
-                {% blocktrans trimmed %}
-                  During the beta period, we don't recommend disconnecting your account from our old GitHub OAuth app.
-                  You will be reminded to complete this step after the beta period ends.
-                {% endblocktrans %}
-              </div>
-              <div class="ui disabled basic segment">
+              <div class="ui basic segment">
                 <p>
                   {% blocktrans trimmed %}
                     Disconnect the old GitHub OAuth app from your Read the Docs account.
