Remove extra period
Similar to https://github.com/readthedocs/ext-theme/pull/691

--- a/readthedocsext/theme/templates/projects/partials/edit/temporary_access_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/temporary_access_list.html
@@ -28,7 +28,7 @@
 {% block list_placeholder_text %}
   <a class="ui button"
      href="https://docs.readthedocs.io/page/commercial/sharing.html"
-     target="_blank">{% trans "Learn more" %}</a>.
+     target="_blank">{% trans "Learn more" %}</a>
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_buttons %}
