--- a/readthedocsext/theme/templates/projects/partials/edit/keys_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/keys_list.html
@@ -1,10 +1,6 @@
 {% extends "includes/crud/table_list.html" %}
 
-{% load i18n %}
-
-{% load core_tags %}
-{% load privacy_tags %}
-{% load projects_tags %}
+{% load trans blocktrans from i18n %}
 
 {% block top_left_menu_items %}
 {% endblock top_left_menu_items %}
@@ -40,7 +36,7 @@
 {% block list_placeholder_text %}
   <a class="ui button"
      href="https://docs.readthedocs.io/page/guides/importing-private-repositories.html"
-     target="_blank">{% trans "Learn more" %}</a>.
+     target="_blank">{% trans "Learn more" %}</a>
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_buttons %}
